try fixing flicker issue

--- a/src/components/landingpage/landingpage.css
+++ b/src/components/landingpage/landingpage.css
@@ -2,6 +2,7 @@
     font-family: 'Poppins','sans-serif';
 }
 
+/*
 .lp-header{
     height: 80vh;
     background-image: url('../../img/hero2.jpeg');
@@ -11,6 +12,7 @@
     position: relative;
     margin-top: 60px;
 }
+*/
 
 .lp-title{
     position: absolute;
@@ -73,7 +75,7 @@
   background-color: #717171;
 }
 
-/* Fading animation */
+
 .fade {
   -webkit-animation-name: fade;
   -webkit-animation-duration: 2s;
@@ -83,15 +85,14 @@
 }
 
 @-webkit-keyframes fade {
-  from {opacity: 0.8}
+  from {opacity: 1}
   to {opacity: 1}
 }
 
 @keyframes fade {
-  from {opacity: 0.8}
+  from {opacity: 1}
   to {opacity: 1}
 }
-
 
 h1 {
     font-size: 3em;
